# Test-Assessment

./: .gitignore  LICENSE  README.md
backend/: DTO.py  Dockerfile  config.py  main.py  publicDTO.py  pyproject.toml
backend/database/: __init__.py  database.py  database_utils.py  models.py
backend/routers/: __init__.py  traveling_router.py
backend/services/domain/: traveling_service.py
backend/services/repository/: places_api.py  postgres_service.py
